--- a/typography.css
+++ b/typography.css
@@ -1,3 +1,5 @@
+/* TYPOGRAPHY */
+
 /* INFO */
 /* headings: line height: 1.1-1.3x; letter spacing: -0.5-2% */
 /* body text: line height: 1.3-1.5; width: 50-75 characters; size: 18px; text block width: 600px */
