--- a/jonecss.css
+++ b/jonecss.css
@@ -1,4 +1,5 @@
 /* CUSTOMIZATION */
+
 :root, html[data-theme="light"] {
     --primary-color: #000000;
     --secondary-color: grey;
@@ -40,6 +41,7 @@
 }
 
 /* TYPOGRAPHY */
+
 /* INFO */
 /* headings: line height: 1.1-1.3x; letter spacing: -0.5-2% */
 /* body text: line height: 1.3-1.5; width: 50-75 characters; size: 18px; text block width: 600px */
@@ -195,6 +197,622 @@ mark {
     color: #000;
 }
 
+/* INTERACTIVE */
+
+/* INPUT */
+input, button, textarea, select {
+    font: inherit;
+    line-height: inherit;
+    color: inherit;
+}
+
+input:focus, input:active, textarea:focus, textarea:active, select:focus, select:active {
+    border-color: var(--accent-color);
+    border-radius: 0;
+    outline: none;
+}
+
+[type=text], [type=email], [type=url], [type=password], [type=number], [type=date], [type=datetime-local], [type=month], [type=search], [type=tel], [type=time], [type=week], [multiple], [list], textarea, select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-color: var(--primary-color);
+    border-width: 1px;
+    border-radius: 0;
+    padding: 0.5rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    max-width: 100%;
+}
+
+textarea {
+    resize: vertical;
+}
+
+fieldset {
+    padding: 1rem;
+}
+
+/* BUTTON */
+button, [role="button"], input[type="submit"], input[type="button"], input[type="reset"] {
+    all: unset;
+    cursor: pointer;
+    transition: 0.3s;
+    padding: 0.125rem 0.25rem;
+    border: 1px solid var(--primary-color);
+    background-color: var(--secondary-background);
+}
+
+button:active, [role="button"]:hover, input[type="submit"]:active, input[type="button"]:active, input[type="reset"]:active {
+    scale: 0.95;
+}
+
+button:hover, [role="button"]:hover, input[type="submit"]:hover, input[type="button"]:hover, input[type="reset"]:hover {
+    border-color: var(--accent-color);
+    opacity: 0.9;
+}
+
+/* OTHER */
+details p {
+    height: 0;
+    transition: 0.3s;
+}
+
+details[open] p {
+    height: max-content;
+}
+
+/* DATA */
+
+.overflow-x-auto {
+    overflow-x: auto;
+}
+
+table {
+    width: 100%;
+    text-align: center;
+    border-collapse: collapse;
+}
+
+table caption {
+    font-size: 5rem;
+}
+
+table colgroup col[span="1"] {
+    color: var(--contrast-color);
+}
+
+table colgroup col[span="2"] {
+    color: var(--secondary-color);
+}
+
+table thead tr th, table tbody tr td {
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.2);
+    border: 1px solid white;
+    padding: 0.5rem;
+}
+
+table thead tr th {
+    font-weight: bold;
+}
+
+table tbody tr td {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+/* LAYOUT */
+
+.container,
+.container-fluid,
+.container-2xl,
+.container-xl,
+.container-lg,
+.container-md,
+.container-sm {
+  --jcss-gutter-x: 1.5rem;
+  --jcss-gutter-y: 0;
+  width: 100%;
+  padding-right: calc(var(--jcss-gutter-x) * 0.5);
+  padding-left: calc(var(--jcss-gutter-x) * 0.5);
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media (min-width: 576px) {
+  .container-sm, .container {
+    max-width: 540px;
+  }
+}
+@media (min-width: 768px) {
+  .container-md, .container-sm, .container {
+    max-width: 720px;
+  }
+}
+@media (min-width: 992px) {
+  .container-lg, .container-md, .container-sm, .container {
+    max-width: 960px;
+  }
+}
+@media (min-width: 1200px) {
+  .container-xl, .container-lg, .container-md, .container-sm, .container {
+    max-width: 1140px;
+  }
+}
+@media (min-width: 1400px) {
+  .container-2xl, .container-xl, .container-lg, .container-md, .container-sm, .container {
+    max-width: 1320px;
+  }
+}
+
+:root {
+  --jcss-breakpoint-xs: 0;
+  --jcss-breakpoint-sm: 576px;
+  --jcss-breakpoint-md: 768px;
+  --jcss-breakpoint-lg: 992px;
+  --jcss-breakpoint-xl: 1200px;
+  --jcss-breakpoint-2xl: 1400px;
+}
+
+.row {
+  --jcss-gutter-x: 1.5rem;
+  --jcss-gutter-y: 0;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: calc(-1 * var(--jcss-gutter-y));
+  margin-right: calc(-0.5 * var(--jcss-gutter-x));
+  margin-left: calc(-0.5 * var(--jcss-gutter-x));
+}
+.row > * {
+  box-sizing: border-box;
+  flex-shrink: 0;
+  width: 100%;
+  max-width: 100%;
+  padding-right: calc(var(--jcss-gutter-x) * 0.5);
+  padding-left: calc(var(--jcss-gutter-x) * 0.5);
+  margin-top: var(--jcss-gutter-y);
+}
+
+.col {
+  flex: 1 0 0%;
+}
+
+.col-auto {
+  flex: 0 0 auto;
+  width: auto;
+}
+
+.col-1 {
+  flex: 0 0 auto;
+  width: 8.33333333%;
+}
+
+.col-2 {
+  flex: 0 0 auto;
+  width: 16.66666667%;
+}
+
+.col-3 {
+  flex: 0 0 auto;
+  width: 25%;
+}
+
+.col-4 {
+  flex: 0 0 auto;
+  width: 33.33333333%;
+}
+
+.col-5 {
+  flex: 0 0 auto;
+  width: 41.66666667%;
+}
+
+.col-6 {
+  flex: 0 0 auto;
+  width: 50%;
+}
+
+.col-7 {
+  flex: 0 0 auto;
+  width: 58.33333333%;
+}
+
+.col-8 {
+  flex: 0 0 auto;
+  width: 66.66666667%;
+}
+
+.col-9 {
+  flex: 0 0 auto;
+  width: 75%;
+}
+
+.col-10 {
+  flex: 0 0 auto;
+  width: 83.33333333%;
+}
+
+.col-11 {
+  flex: 0 0 auto;
+  width: 91.66666667%;
+}
+
+.col-12 {
+  flex: 0 0 auto;
+  width: 100%;
+}
+
+@media (min-width: 576px) {
+.col-sm {
+    flex: 1 0 0%;
+}
+.col-sm-auto {
+    flex: 0 0 auto;
+    width: auto;
+}
+.col-sm-1 {
+    flex: 0 0 auto;
+    width: 8.33333333%;
+}
+.col-sm-2 {
+    flex: 0 0 auto;
+    width: 16.66666667%;
+}
+.col-sm-3 {
+    flex: 0 0 auto;
+    width: 25%;
+}
+.col-sm-4 {
+    flex: 0 0 auto;
+    width: 33.33333333%;
+}
+.col-sm-5 {
+    flex: 0 0 auto;
+    width: 41.66666667%;
+}
+.col-sm-6 {
+    flex: 0 0 auto;
+    width: 50%;
+}
+.col-sm-7 {
+    flex: 0 0 auto;
+    width: 58.33333333%;
+}
+.col-sm-8 {
+    flex: 0 0 auto;
+    width: 66.66666667%;
+}
+.col-sm-9 {
+    flex: 0 0 auto;
+    width: 75%;
+}
+.col-sm-10 {
+    flex: 0 0 auto;
+    width: 83.33333333%;
+}
+.col-sm-11 {
+    flex: 0 0 auto;
+    width: 91.66666667%;
+}
+.col-sm-12 {
+    flex: 0 0 auto;
+    width: 100%;
+}
+}
+
+@media (min-width: 768px) {
+.col-md {
+    flex: 1 0 0%;
+}
+.col-md-auto {
+    flex: 0 0 auto;
+    width: auto;
+}
+.col-md-1 {
+    flex: 0 0 auto;
+    width: 8.33333333%;
+}
+.col-md-2 {
+    flex: 0 0 auto;
+    width: 16.66666667%;
+}
+.col-md-3 {
+    flex: 0 0 auto;
+    width: 25%;
+}
+.col-md-4 {
+    flex: 0 0 auto;
+    width: 33.33333333%;
+}
+.col-md-5 {
+    flex: 0 0 auto;
+    width: 41.66666667%;
+}
+.col-md-6 {
+    flex: 0 0 auto;
+    width: 50%;
+}
+.col-md-7 {
+    flex: 0 0 auto;
+    width: 58.33333333%;
+}
+.col-md-8 {
+    flex: 0 0 auto;
+    width: 66.66666667%;
+}
+.col-md-9 {
+    flex: 0 0 auto;
+    width: 75%;
+}
+.col-md-10 {
+    flex: 0 0 auto;
+    width: 83.33333333%;
+}
+.col-md-11 {
+    flex: 0 0 auto;
+    width: 91.66666667%;
+}
+.col-md-12 {
+    flex: 0 0 auto;
+    width: 100%;
+}
+}
+
+@media (min-width: 992px) {
+.col-lg {
+    flex: 1 0 0%;
+}
+.col-lg-auto {
+    flex: 0 0 auto;
+    width: auto;
+}
+.col-lg-1 {
+    flex: 0 0 auto;
+    width: 8.33333333%;
+}
+.col-lg-2 {
+    flex: 0 0 auto;
+    width: 16.66666667%;
+}
+.col-lg-3 {
+    flex: 0 0 auto;
+    width: 25%;
+}
+.col-lg-4 {
+    flex: 0 0 auto;
+    width: 33.33333333%;
+}
+.col-lg-5 {
+    flex: 0 0 auto;
+    width: 41.66666667%;
+}
+.col-lg-6 {
+    flex: 0 0 auto;
+    width: 50%;
+}
+.col-lg-7 {
+    flex: 0 0 auto;
+    width: 58.33333333%;
+}
+.col-lg-8 {
+    flex: 0 0 auto;
+    width: 66.66666667%;
+}
+.col-lg-9 {
+    flex: 0 0 auto;
+    width: 75%;
+}
+.col-lg-10 {
+    flex: 0 0 auto;
+    width: 83.33333333%;
+}
+.col-lg-11 {
+    flex: 0 0 auto;
+    width: 91.66666667%;
+}
+.col-lg-12 {
+    flex: 0 0 auto;
+    width: 100%;
+}
+}
+
+@media (min-width: 1200px) {
+.col-xl {
+    flex: 1 0 0%;
+}
+.col-xl-auto {
+    flex: 0 0 auto;
+    width: auto;
+}
+.col-xl-1 {
+    flex: 0 0 auto;
+    width: 8.33333333%;
+}
+.col-xl-2 {
+    flex: 0 0 auto;
+    width: 16.66666667%;
+}
+.col-xl-3 {
+    flex: 0 0 auto;
+    width: 25%;
+}
+.col-xl-4 {
+    flex: 0 0 auto;
+    width: 33.33333333%;
+}
+.col-xl-5 {
+    flex: 0 0 auto;
+    width: 41.66666667%;
+}
+.col-xl-6 {
+    flex: 0 0 auto;
+    width: 50%;
+}
+.col-xl-7 {
+    flex: 0 0 auto;
+    width: 58.33333333%;
+}
+.col-xl-8 {
+    flex: 0 0 auto;
+    width: 66.66666667%;
+}
+.col-xl-9 {
+    flex: 0 0 auto;
+    width: 75%;
+}
+.col-xl-10 {
+    flex: 0 0 auto;
+    width: 83.33333333%;
+}
+.col-xl-11 {
+    flex: 0 0 auto;
+    width: 91.66666667%;
+}
+.col-xl-12 {
+    flex: 0 0 auto;
+    width: 100%;
+}
+}
+
+@media (min-width: 1400px) {
+.col-2xl {
+    flex: 1 0 0%;
+}
+.col-2xl-auto {
+    flex: 0 0 auto;
+    width: auto;
+}
+.col-2xl-1 {
+    flex: 0 0 auto;
+    width: 8.33333333%;
+}
+.col-2xl-2 {
+    flex: 0 0 auto;
+    width: 16.66666667%;
+}
+.col-2xl-3 {
+    flex: 0 0 auto;
+    width: 25%;
+}
+.col-2xl-4 {
+    flex: 0 0 auto;
+    width: 33.33333333%;
+}
+.col-2xl-5 {
+    flex: 0 0 auto;
+    width: 41.66666667%;
+}
+.col-2xl-6 {
+    flex: 0 0 auto;
+    width: 50%;
+}
+.col-2xl-7 {
+    flex: 0 0 auto;
+    width: 58.33333333%;
+}
+.col-2xl-8 {
+    flex: 0 0 auto;
+    width: 66.66666667%;
+}
+.col-2xl-9 {
+    flex: 0 0 auto;
+    width: 75%;
+}
+.col-2xl-10 {
+    flex: 0 0 auto;
+    width: 83.33333333%;
+}
+.col-2xl-11 {
+    flex: 0 0 auto;
+    width: 91.66666667%;
+}
+.col-2xl-12 {
+    flex: 0 0 auto;
+    width: 100%;
+}
+}
+
+/* EXPERIMENTAL */
+
+/* ASIDE */
+/* SIDEBAR */
+/* Inspiration: https://every-layout.dev/layouts/sidebar/ */
+body[data-layout="sidebar"] {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+body[data-layout="sidebar"] aside {
+    position: relative;
+    /* ↓ The width when the sidebar _is_ a sidebar */
+    flex-basis: 20rem;
+    flex-grow: 1;
+}
+
+body[data-layout="sidebar"] aside ul {
+    z-index: 999;
+    top: 0;
+    padding: 1rem;
+    position: sticky;
+    background-color: var(--secondary-background);
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 0.25rem;
+    padding: 0.5rem;
+    margin: 0rem;
+    border-bottom-right-radius: var(--border-radius)
+}
+
+body[data-layout="sidebar"] aside ul li {
+    background-color: var(--primary-background);
+    border-radius: var(--border-radius);
+    padding: 0.25rem;
+    list-style: none;
+}
+
+body[data-layout="sidebar"] aside ul li input[type="radio"] {
+    display: none;
+}
+
+body[data-layout="sidebar"] aside ul li label, body[data-layout="sidebar"] aside ul li a {
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+body[data-layout="sidebar"] aside ul li label:hover, body[data-layout="sidebar"] aside ul li a:hover {
+    padding-left: 1rem;
+}
+
+body[data-layout="sidebar"] aside ul li input[type="radio"]:checked+label {
+    padding-left: 0rem;
+    color: var(--accent-color);
+    text-decoration: underline;
+}
+
+body[data-layout="sidebar"] aside ul li input[type="radio"]:checked+label::before {
+    content: "";
+    display: inline-block;
+    width: 0.5rem;
+    height: 0.5rem;
+    background-color: var(--accent-color);
+    margin-right: 0.5rem;
+}
+
+body[data-layout="sidebar"] aside ul li input[type="radio"]+label {
+    color: var(--primary-color);
+    text-decoration: none;
+}
+
+body[data-layout="sidebar"] main {
+    /* ↓ Grow from nothing */
+    flex-basis: 0;
+    flex-grow: 999;
+    /* ↓ Wrap when the elements are of equal width */
+    min-inline-size: 50%;
+}
+
 /* CSS RESETS & DEFAULT STYLES */
 html {
     color-scheme: dark light;
@@ -281,48 +899,6 @@ img, picture, svg, canvas, map, video, audio {
 table {
     border-collapse: collapse;
     border-spacing: 0;
-}
-
-/* INTERACTIVE */
-/* Input */
-input, button, textarea, select {
-    font: inherit;
-    line-height: inherit;
-    color: inherit;
-}
-
-fieldset {
-    padding: 1rem;
-}
-
-/* Button */
-button, [role="button"], input[type="submit"], input[type="button"], input[type="reset"] {
-    all: unset;
-    cursor: pointer;
-    transition: 0.3s;
-    padding: 0.125rem 0.25rem;
-    border-radius: 0.5rem;
-    border: 2px solid var(--primary-color);
-    background-color: var(--secondary-background);
-}
-
-button:active, [role="button"]:hover, input[type="submit"]:active, input[type="button"]:active, input[type="reset"]:active {
-    scale: 0.95;
-}
-
-button:hover, [role="button"]:hover, input[type="submit"]:hover, input[type="button"]:hover, input[type="reset"]:hover {
-    border: 2px solid var(--accent-color);
-    opacity: 0.9;
-}
-
-/* Details */
-details p {
-    height: 0;
-    transition: 0.3s;
-}
-
-details[open] p {
-    height: max-content;
 }
 
 /* -- HEADER -- */
